--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "homepage": "web/build",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,8 +12,11 @@
     "@types/node": "^16.11.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.3"
@@ -45,6 +49,7 @@
   "devDependencies": {
     "@craco/craco": "^6.4.3",
     "cross-env": "^7.0.3",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.0.19"
   }
 }
