--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,11 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "cross-env PUBLIC_URL=/ craco start",
