--- a/web/package.json
+++ b/web/package.json
@@ -12,18 +12,20 @@
     "@types/node": "^16.11.18",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "buffer": "^6.0.3",
     "moment": "^2.29.1",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.3",
-    "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "typescript": "^4.5.5",
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "cross-env PUBLIC_URL=/ craco start",
