--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
     "moment": "^2.29.1",
+    "nodejs-base64-converter": "^1.0.5",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
