--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.11",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
+    "date-fns": "^2.28.0",
     "moment": "^2.29.1",
     "nodejs-base64-converter": "^1.0.5",
     "querystring": "^0.2.1",
