--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.11",
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-router-dom": "^6.2.1",
